--- a/catalog.html
+++ b/catalog.html
@@ -228,87 +228,123 @@
                 <div class="offer-image-wrapper">
                   <img src="img/ice01.jpg" width="267" height="267" alt="Сливочное морожение">
                 </div>
-                <a class="offer-titel">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+                <a class="offer-titel" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
                 <p class="offer-price">310&#8381;<span>/кг</span></p>
+                <div class="button-offer-wrapper">
+                  <button class="button button-offer">Быстрый просмотр</button>
+                </div>
               </li>
               <li class="offer-item">
                 <div class="offer-image-wrapper">
                   <img src="img/ice02.jpg" width="267" height="267" alt="Сливочно-кофейное морожение">
                 </div>
-                <a class="offer-titel">Сливочно-кофейное с кусочками шоколада</a>
+                <a class="offer-titel" href="#">Сливочно-кофейное с кусочками шоколада</a>
                 <p class="offer-price">380&#8381;<span>/кг</span></p>
+                <div class="button-offer-wrapper">
+                  <button class="button button-offer">Быстрый просмотр</button>
+                </div>
               </li>
               <li class="offer-item">
                 <div class="offer-image-wrapper">
                   <img src="img/ice03.jpg" width="267" height="267" alt="Сливочно-клубничное морожение">
                 </div>
-                <a class="offer-titel">Сливочно-клубничное с присыпкой из белого шоколада</a>
+                <a class="offer-titel" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
                 <p class="offer-price">355&#8381;<span>/кг</span></p>
+                <div class="button-offer-wrapper">
+                  <button class="button button-offer">Быстрый просмотр</button>
+                </div>
               </li>
               <li class="offer-item">
                 <div class="offer-image-wrapper">
                   <img src="img/ice04.jpg" width="267" height="267" alt="Сливочное крем-брюле">
                 </div>
-                <a class="offer-titel">Сливочное крем-брюле с карамельной подливкой</a>
+                <a class="offer-titel" href="#">Сливочное крем-брюле с карамельной подливкой</a>
                 <p class="offer-price">455&#8381;<span>/кг</span></p>
+                <div class="button-offer-wrapper">
+                  <button class="button button-offer">Быстрый просмотр</button>
+                </div>
               </li>
 
               <li class="offer-item">
                 <div class="offer-image-wrapper">
                   <img src="img/ice05.jpg" width="267" height="267" alt="Сливочное брусничное">
                 </div>
-                <a class="offer-titel">Сливочное с брусничным джемом</a>
+                <a class="offer-titel" href="#">Сливочное с брусничным джемом</a>
                 <p class="offer-price">325&#8381;<span>/кг</span></p>
+                <div class="button-offer-wrapper">
+                  <button class="button button-offer">Быстрый просмотр</button>
+                </div>
               </li>
               <li class="offer-item">
                 <div class="offer-image-wrapper">
                   <img src="img/ice06.jpg" width="267" height="267" alt="Сливочно-черничное морожение">
                 </div>
-                <a class="offer-titel">Сливочно-черничное с цельными ягодами черники</a>
+                <a class="offer-titel" href="#">Сливочно-черничное с цельными ягодами черники</a>
                 <p class="offer-price">410&#8381;<span>/кг</span></p>
+                <div class="button-offer-wrapper">
+                  <button class="button button-offer">Быстрый просмотр</button>
+                </div>
               </li>
               <li class="offer-item">
                 <div class="offer-image-wrapper">
                   <img src="img/ice07.jpg" width="267" height="267" alt="Сливочно-лимонное морожение">
                 </div>
-                <a class="offer-titel">Сливочно-лимонное с карамельной присыпкой</a>
+                <a class="offer-titel" href="#">Сливочно-лимонное с карамельной присыпкой</a>
                 <p class="offer-price">375&#8381;<span>/кг</span></p>
+                <div class="button-offer-wrapper">
+                  <button class="button button-offer">Быстрый просмотр</button>
+                </div>
               </li>
               <li class="offer-item">
                 <div class="offer-image-wrapper">
                   <img src="img/ice08.jpg" width="267" height="267" alt="Сливочное с шоколадом">
                 </div>
-                <a class="offer-titel">Сливочное с шоколадной стружкой</a>
+                <a class="offer-titel" href="#">Сливочное с шоколадной стружкой</a>
                 <p class="offer-price">320&#8381;<span>/кг</span></p>
+                <div class="button-offer-wrapper">
+                  <button class="button button-offer">Быстрый просмотр</button>
+                </div>
               </li>
 
               <li class="offer-item">
                 <div class="offer-image-wrapper">
                   <img src="img/ice09.jpg" width="267" height="267" alt="Сливочное-ванильное морожение">
                 </div>
-                <a class="offer-titel">Сливочно-ванильное с кусочками шоколада</a>
+                <a class="offer-titel" href="#">Сливочно-ванильное с кусочками шоколада</a>
                 <p class="offer-price">440&#8381;<span>/кг</span></p>
+                <div class="button-offer-wrapper">
+                  <button class="button button-offer">Быстрый просмотр</button>
+                </div>
               </li>
               <li class="offer-item">
                 <div class="offer-image-wrapper">
                   <img src="img/ice10.jpg" width="267" height="267" alt="Сливочно-ментоловое морожение">
                 </div>
-                <a class="offer-titel">Сливочно с ментоловым сиропом</a>
+                <a class="offer-titel" href="#">Сливочно с ментоловым сиропом</a>
                 <p class="offer-price">435&#8381;<span>/кг</span></p>
+                <div class="button-offer-wrapper">
+                  <button class="button button-offer">Быстрый просмотр</button>
+                </div>
               </li>
               <li class="offer-item">
                 <div class="offer-image-wrapper">
                   <img src="img/ice11.jpg" width="267" height="267" alt="Сливочное с шоколадом морожение">
                 </div>
-                <a class="offer-titel">Сливочное с кусочками черного шоколада</a>
+                <a class="offer-titel" href="#">Сливочное с кусочками черного шоколада</a>
                 <p class="offer-price">355&#8381;<span>/кг</span></p>
+                <div class="button-offer-wrapper">
+                  <button class="button button-offer">Быстрый просмотр</button>
+                </div>
               </li>
               <li class="offer-item">
                 <div class="offer-image-wrapper">
                   <img src="img/ice12.jpg" width="267" height="267" alt="Сливочное-мятное">
                 </div>
-                <a class="offer-titel">Сливочное с мятным сиропом</a>
+                <a class="offer-titel" href="#">Сливочное с мятным сиропом</a>
                 <p class="offer-price">420&#8381;<span>/кг</span></p>
+                <div class="button-offer-wrapper">
+                  <button class="button button-offer">Быстрый просмотр</button>
+                </div>
               </li>
             </ul>
           </section>
