--- a/catalog.html
+++ b/catalog.html
@@ -125,7 +125,7 @@
 
               <div class="header-info">
                 <p class="opening-hours">С 10 до 20, ежедневно</p>
-                <p class="header-telephone" href="tel:+78124502525">8 812 450-25-25</p>
+                <a class="header-telephone" href="tel:+78124502525">8 812 450-25-25</a>
               </div>
             </div>
 
