--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
               <div class="header-info">
                 <p class="opening-hours">С 10 до 20, ежедневно</p>
-                <p class="header-telephone" href="tel:+78124502525">8 812 450-25-25</p>
+                <a class="header-telephone" href="tel:+78124502525">8 812 450-25-25</a>
               </div>
             </div>
           </header>
@@ -91,16 +91,16 @@
             </div>
             <ul class="slider-list">
               <li class="slider-item slide" id="slide1">
-                <h2>Крем-брюле и пломбир с малиновым джемом</h3>
+                <h2>Крем-брюле и пломбир с малиновым джемом</h2>
                 <a class="button slider-button" href="#">Давайте оба!</a>
               </li>
               <li class="slider-item slide" id="slide2">
-                <h2>Шоколадный пломбир и лимонный сорбет</h3>
+                <h2>Шоколадный пломбир и лимонный сорбет</h2>
 
                 <a class="button slider-button" href="#">Давайте оба!</a>
               </li>
               <li class="slider-item slide" id="slide3">
-                <h2>Пломбир с помадкой и клубничный щербет</h3>
+                <h2>Пломбир с помадкой и клубничный щербет</h2>
 
                 <a class="button slider-button" href="#">Давайте оба!</a>
               </li>
@@ -113,13 +113,13 @@
           <section class="announces">
             <h2 class="visually-hidden">Анонсы ангеботов</h2>
             <article class="announce-raspberry">
-              <h3>Малинка даром!</h2>
+              <h3>Малинка даром!</h3>
               <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
               <a class="button announces-button" href="#">Хочу варенье!</a>
             </article>
 
             <article class="announce-chocolate">
-              <h3>Шоколадки даром!</h2>
+              <h3>Шоколадки даром!</h3>
               <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
               <a class="button announces-button" href="#">Хочу шоколадки!</a>
             </article>
@@ -133,7 +133,7 @@
                   <img src="img/ice01.jpg" width="267" height="267" alt="Сливочное морожение">
                 </div>
                 <a class="offer-titel" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-                <p class="offer-price">310&#x20bd<span>/кг</span></p>
+                <p class="offer-price">310&#x20bd;<span>/кг</span></p>
                 <div class="button-offer-wrapper">
                   <button class="button button-offer">Быстрый просмотр</button>
                 </div>
@@ -143,7 +143,7 @@
                   <img src="img/ice02.jpg" width="267" height="267" alt="Сливочно-кофейное морожение">
                 </div>
                 <a class="offer-titel" href="#">Сливочно-кофейное с кусочками шоколада</a>
-                <p class="offer-price">380&#x20bd<span>/кг</span></p>
+                <p class="offer-price">380&#x20bd;<span>/кг</span></p>
                 <div class="button-offer-wrapper">
                   <button class="button button-offer">Быстрый просмотр</button>
                 </div>
@@ -153,7 +153,7 @@
                   <img src="img/ice03.jpg" width="267" height="267" alt="Сливочно-клубничное морожение">
                 </div>
                 <a class="offer-titel" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
-                <p class="offer-price">355 &#x20bd<span>/кг</span></p>
+                <p class="offer-price">355 &#x20bd;<span>/кг</span></p>
                 <div class="button-offer-wrapper">
                   <button class="button button-offer">Быстрый просмотр</button>
                 </div>
@@ -163,7 +163,7 @@
                   <img src="img/ice04.jpg" width="267" height="267" alt="Сливочное крем-брюле">
                 </div>
                 <a class="offer-titel" href="#">Сливочное крем-брюле с карамельной подливкой</a>
-                <p class="offer-price">455&#x20bd<span>/кг</span></p>
+                <p class="offer-price">455&#x20bd;<span>/кг</span></p>
                 <div class="button-offer-wrapper">
                   <button class="button button-offer">Быстрый просмотр</button>
                 </div>
@@ -174,16 +174,16 @@
           <section class="features">
             <h2 class="visually-hidden">Кто мы</h2>
             <h3>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
-            <ul class="features-list">
+            <div class="features-list">
               <div class="features-left-column">
-                <li class="features-item"><p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p></li>
-                <li class="features-item"><p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p></li>
+                <div class="features-item"><p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p></div>
+                <div class="features-item"><p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p></div>
               </div>
               <div class="features-right-column">
-                <li class="features-item"><p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p></li>
-                <li class="features-item"><p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p></li>
+                <div class="features-item"><p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p></div>
+                <div class="features-item"><p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p></div>
               </div>
-            </ul>
+            </div>
           </section>
 
           <div class="blog-newsletter">
@@ -207,13 +207,13 @@
 
           <section class="map">
             <h2 class="visually-hidden">Глейси на карте</h2>
-            <img class="map-image" src="img/map.jpg" width="100%" height="auto" alt="Магазин Глейси на карте">
+            <img class="map-image" src="img/map.jpg" width="1200" height="428" alt="Магазин Глейси на карте">
             <section class="address">
               <h2 class="visually-hidden">Адрес Глейси</h2>
-              <p class="address-map">Адрес главного офиса <br>и офлайн-магазина:
+              <p class="map-address">Адрес главного офиса <br>и офлайн-магазина:
                 <b class="address-details">ул. Большая Конюшенная <br>19/8, Санкт-Петербург</b>
               </p>
-              <p class="address-map">Для заказов по телефону:
+              <p class="map-tel">Для заказов по телефону:
                 <a class="telephone" href="tel:+78124502525">8 812 450-25-25</a>
                 <span class="hours-map">(с 10 до 20 ежедневно)</span>
               </p>
@@ -256,7 +256,9 @@
             <p class="copyright-text">Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> &#169; 2017</p>
           </section>
         </footer>
-        <div class="overlay">
+      </div>
+
+      <div class="overlay">
           <!-- Popup with feedback form -->
           <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
             <h2 class="feedback-form-title">Мы обязательно вам ответим!</h2>
@@ -269,7 +271,6 @@
             <button class="button-feedback-close" type="button">Закрыть</button>
           </form>
         </div>
-      </div>
     </div>
   </body>
 </html>
